# ChangeLog for media-plugins/audacious-plugins
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.208 2011/04/29 17:45:37 xarthisius Exp $

  29 Apr 2011; Kacper Kowalik <xarthisius@gentoo.org>
  audacious-plugins-2.4.4-r1.ebuild:
  ppc stable wrt #361267

  29 Apr 2011; Samuli Suominen <ssuominen@gentoo.org>
  audacious-plugins-2.4.4-r1.ebuild:
  ppc64 stable wrt #361267

  23 Apr 2011; Raúl Porcel <armin76@gentoo.org>
  audacious-plugins-2.4.4-r1.ebuild:
  alpha/sparc/x86 stable wrt #361267

*audacious-plugins-2.5.0 (16 Apr 2011)

  16 Apr 2011; Tony Vroon <chainsaw@gentoo.org>
  -audacious-plugins-2.2-r2.ebuild, -audacious-plugins-2.4.1.ebuild,
  -audacious-plugins-2.4.2.ebuild, -audacious-plugins-2.4.3.ebuild,
  -audacious-plugins-2.4.3-r1.ebuild, -audacious-plugins-2.5_alpha1.ebuild,
  +audacious-plugins-2.5.0.ebuild:
  First release on the 2.5 branch, no longer masked. Removed old ebuilds.

  11 Apr 2011; Jeroen Roovers <jer@gentoo.org>
  audacious-plugins-2.4.4-r1.ebuild:
  Stable for HPPA (bug #361267).

  03 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  audacious-plugins-2.2-r2.ebuild, audacious-plugins-2.4.0.ebuild,
  audacious-plugins-2.4.1.ebuild, audacious-plugins-2.4.2.ebuild,
  audacious-plugins-2.4.3.ebuild, audacious-plugins-2.4.3-r1.ebuild:
  Migrate to virtual/ffmpeg in all versions

  30 Mar 2011; Samuli Suominen <ssuominen@gentoo.org>
  audacious-plugins-2.4.4-r1.ebuild:
  amd64 stable wrt #361267

  30 Mar 2011; Tony Vroon <chainsaw@gentoo.org>
  audacious-plugins-2.4.4-r1.ebuild, audacious-plugins-2.5_alpha1.ebuild:
  Replace explicit ffmpeg depend with the ffmpeg virtual for libav
  compatibility. As suggested by "tbartdev" in bug #361285.

  29 Mar 2011; Christoph Mende <angelos@gentoo.org>
  audacious-plugins-2.2-r2.ebuild, audacious-plugins-2.4.0.ebuild,
  audacious-plugins-2.4.1.ebuild, audacious-plugins-2.4.2.ebuild,