@@ -1,23 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD audacious-plugins-9999.ebuild 3547 SHA256 ea9e0084209685be8adbd5f553b11c86cd90bede77d0fd702c5cce1a49ec2b8c SHA512 6c4767cd057a2cb4583179ce27cb9b0c7a619c88da6d63eb6268f32955e156a0a22e9bbd76e97872a4511d1c1561624e69c0db47c55a0fb3af1cdfc71bbfc371 WHIRLPOOL 6dbf01f3f396888031a499227c6172864fc832855e4ba149a959c7e3476c10570ef99fb097f03bd2e1594f694449779dbbe0737a54b9f971c631315e5a24996e
-MISC ChangeLog 43387 SHA256 f2cadf5f7115d4e5e55a4d5dfa5248e5f42acb2832f8c1072f3ba542ab2db4ca SHA512 fbd91975caacd1e4641cb2afd7a94267c85b4b7aad4975daba76c39adc57016046590be9a0fff4a4a466cd874d416388273d12f354fa400c0974ac04c41d2d66 WHIRLPOOL 0e56675b7a360c2639186de50387cd3e425918d33ac780f2c8c05cc08cdbec93d685f3a732a2293d44c9a0071707a0e516c97ee148ba9a3bc59a48bff6081b43
+EBUILD audacious-plugins-9999.ebuild 3424 SHA256 2571be4c0c0d8d5080b0b3195447d5fb118adbd52e526cea73a05273acb08a89 SHA512 84653a8b3c419d389739c3191c27a25e023bace90cc02294a9e3e8b3aaa6eccc9ce4fa185c3dcc775afdf9ef22a4f1d156508b6329105bd7f255679651c2f8b5 WHIRLPOOL 1fe9f484d8f17568eef38935cb78f98e04217e0b652fed9e6fcffcb15655ba57b04926ec2a724c1a52bdd58aa9b96ab9093418ec986caf8c1e5d055ba7b02ad5
+MISC ChangeLog 43583 SHA256 4de3a297d17650c61aba05f480229d2dbca871d853f0e29c13417840efb49edf SHA512 66f4ad8a5f5ae51863344c9a64ccc7277186a9cfaa8f27dac8e5bb7408c737e097e1235c10ab8e6309f51b2bc81e1dbe1935931dcba4d54178a53721aa44a99a WHIRLPOOL 09bbebc1a0afe00b86555b507f02a456abfa0303365def5b57a5f3f5ec310296c60e77abfd78d49d11fbc4370ad6beca697fa8c0c2f9dcce248f302f4b63f830
 MISC metadata.xml 866 SHA256 bf2e4fa7b30470ba8f7d1c90a69cbc722f929107d05f3c44ba2579aa242ffa8c SHA512 123f553714a68395064605898837eb4ba59fd7a1e0c4ba8b761add08099df6a1f3eb3032454d129b87fa1d0efcac035400990143010662e01c4a1ef52beec68f WHIRLPOOL 54bf9dc6a320e519c7632e5fc334af71d9c81f1e09fc939a7996713228c6f5f04979501dbb6c327ef123b861030218c4af61b72a9e57b4bf879c5758c6bcd14b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRT9p0AAoJEDuWpXgki9wHGVgP+QEPySYDgkEkeFKQ5xdeCeYH
-WQQVxku9T0vAuwfMHylntKG+9pqWbhIujEr13NBdtHLjRnDl/B9xOBndKFj/5+Tj
-ZqLCCnUtf8n9yKnQn1XXPZeypVVMjYJlpgfe8feH8zVbACKdaZOhvvcqHbPldaRu
-02izKtcwqXT/1xDrCS6VUBbHSVgdlSSW5NEYsmpetryNtT7WfJ9OkWeyCw/u3Fai
-YTAtSQ7q70P3Z8N5Zu6yBRFwycVdcXeQjdAfSI55CdyFVvSX5byKQSVdcmorQOZz
-PToiuSDHC2xQ1K8jCUDv3CC8t8hxJxKOj6ohHizEDEs1U3EVH7/Nhso8ABAVlHHf
-p5fRTaJuDoWFoMKJawhBjglFDF+8fRZdMorW5/vuFpbfZU3irqoZypvZe5PB15kR
-EA1kgSh7L6O5wHspZvz4t/Ue+aw53YprRNvmrdRnJ0aWCdrYgXRtD/X54TOk9ubB
-NPml+bDq3yNzDSWgjG7NbWsELRI89zzF0GnbfTuRssxk13hX3KP71zwcyr/aoxrt
-JAhbXZnqjpjWFNywXKboOFp30pQXyVpoT4VvzJYC0+MtUVr1atgh7XtuMNOXMm3z
-ZygJrbtoXEScrCCj8nyyrwqOQK8QLBVLVkBbq85Bv2EkYJfx7+3hoToecnxXQ3BC
-MxGR6ctDk58CC8HzRqTP
-=ioI1
+iQIcBAEBCAAGBQJSVfbZAAoJEDuWpXgki9wHVAQP/1/5kmOtLtFhklrTj0YUe0aD
+zSnbRTdUYVzQv2TlG9tVhCHe16kAnR2MVqPyUL/lMV1W4LI5M2g+4AWWiCHo18X0
+qtVQOsE08oreE1+ltuBNREpYV7OuXQoOVgwdFfOh+brDJmlO1KRR2pAAXeZLzeL6
+Ok2MDW5th491WTjZsBw0h5OKJtQLIUkRI3DuvUkbuUQOc+dH4/Nk8oZA73d2X7tu
+H+JHxTcUiOFvXGNeSvIN+m83sjhc33oDdEdHZu7l4MkLoA7P3xYdKPZwG8a5WVrF
+QcSpTNNTQHMPoKTX7ePGD2yXFkd1FFO8l7//fjs+mCIKIwRt+3IFEus4c66fUyuQ
+fCG3ehUjJ8Lqw/Ya+4zvN18s+qV+fhgUPIlorNu/nQxW8LsZnzDIWzDh+bZsjzDN
+/qKTkAqHyxWDKrdFtjFBV6jyr365tB0Xa3P1zJpo4tqAoIT0x58Iv+JJbTwAiFoB
+//XTsceWMF/lhahd6nDnQBOoGSIbv9XrpfHf5UooMZr0s7Vs+89Go9e2NKVpTgpV
+8AKZB+afFJN3bRKxjpWTR5acQfvcbYJoKdu25H+pHdBmspoIGhzFKnsRUhpNr92P
+NZwHaZfb8BLHGXrmfrN2lLP6+GuQMOROzyRqxZAuIDHhGxCKJ/9PlaCKDLtuWjaF
+tr94YcWxJvZ8MzBDrKdH
+=tMrN
 -----END PGP SIGNATURE-----
